Error line wrapping, fix html

--- a/tryps.css
+++ b/tryps.css
@@ -194,3 +194,11 @@ body {
 #footer a {
     color: #66a;
 }
+
+pre {
+    white-space: pre-wrap;       /* CSS 3 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
